Fix publications tab scroll on mobile

--- a/main.css
+++ b/main.css
@@ -575,5 +575,9 @@ section {
 .image_6 {
   display: none;
 }
+.publications {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 
 }
